2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (seek_slider_pressed_cb): Don't show seeking to
	label when we can direct seek (Closes: #338390)

2008-10-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
	Fix playing property being wrong when an error occurs
	(Closes: #556039)

2008-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Revert last patch,
	we were already checking for GST_TAG_PREVIEW_IMAGE

2008-10-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Patch from John Millikin
	<jmillikin@gmail.com> to also look for the GST_TAG_PREVIEW_IMAGE
	tag when trying to get audio file covers (Closes: #556074)

2008-10-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/idl/totemIBasicPlayer.idl:
	* browser-plugin/totem-plugin-viewer.c (parse_plugin_type):
	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemBasicPlugin.h:
	* browser-plugin/totemPlugin.cpp:
	* configure.in: Remove the "basic" web browser plugin, you should
	now use the VLC API to control the basic mime-types (Closes: #554867)

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: As the requestURI isn't an absolute
	URI anymore, it might not have a scheme, in which case, check that
	of the baseURI, fixes viewer being called with a playlist, instead
	of a media URI when the src is relative (Closes: #555417)

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (relative_uri_remove_query),
	(resolve_uri): g_file_resolve_relative_path() doesn't handle queries
	(or fragments, but we don't care about them), so work around that
	fact. Fixes resolution of filenames when they have a '?' in their
	name (Helps: #555417)
